--- a/app/src/main/res/layout/activity_home_tech_garden.xml
+++ b/app/src/main/res/layout/activity_home_tech_garden.xml
@@ -104,6 +104,18 @@
         app:layout_constraintTop_toBottomOf="@+id/btn_show_device"
         android:layout_marginTop="20dp"/>
 
+    <TextView
+        android:id="@+id/tv_result"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="15dp"
+        android:layout_marginVertical="15dp"
+        android:text="resultado"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btn_search_device"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"/>
+
 
 
 
